--- a/Python/.vscode/settings.json
+++ b/Python/.vscode/settings.json
@@ -4,12 +4,13 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pytestEnabled": true,
+    "python.testing.pytestEnabled": false,
     "python.testing.unittestArgs": [
         "-v",
         "-s",
         ".",
         "-p",
         "*test.py"
-    ]
+    ],
+    "python.testing.promptToConfigure": false
 }
