--- a/Python/.vscode/settings.json
+++ b/Python/.vscode/settings.json
@@ -12,5 +12,6 @@
         "-p",
         "*test.py"
     ],
-    "python.testing.promptToConfigure": false
+    "python.testing.promptToConfigure": false,
+    "python.pythonPath": "/usr/bin/python"
 }
