--- a/Python/.vscode/settings.json
+++ b/Python/.vscode/settings.json
@@ -13,5 +13,5 @@
         "*test.py"
     ],
     "python.testing.promptToConfigure": false,
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "/home/tank/miniconda3/envs/zebra/bin/python"
 }
